--- a/EduMultiPro 3 Parte/MVC1/app/static/1-css/2.4.css
+++ b/EduMultiPro 3 Parte/MVC1/app/static/1-css/2.4.css
@@ -154,7 +154,9 @@ i:hover{
     font-size: 40px;
     font-weight: bold;
     color: var(--azul-primario);
-    
+}
+#btnMostrarModificar{
+    margin-right: 20px;
 }
 .contenidoTablaUsuario{
     overflow-x: auto;
@@ -185,10 +187,17 @@ th, td{
     border-radius: 15px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); 
     width: 90%; 
+}
+.formularioInterno{
     display: flex;
     justify-content: center;
+    width: 100%;
 }
-
+#btnCancelar{
+    display: block;
+    margin-bottom: 10px;
+    height: 40px;
+}
 .contenidoFormulario form{
     display: flex;
     flex-direction: column;
