--- a/EduMultiPro 3 Parte/MVC1/app/templates/admin/3.2verCurso.html
+++ b/EduMultiPro 3 Parte/MVC1/app/templates/admin/3.2verCurso.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ver Usuario</title>
+  <title>Integrantes</title>
   <link rel="icon" href="{{ url_for('static', filename='img/icono.png') }}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!--libreria de logos-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -52,8 +52,6 @@
                     <li><a class="dropdown-item" href="{{ url_for('admin_bp.curso') }}"><i class="fa-solid fa-layer-group"><p>Cursos</p></i></a></li>
                     <li><a class="dropdown-item" href="{{ url_for('admin_bp.horario') }}"><i class="fa-solid fa-calendar-days"><p>Horarios</p></i></a></li>
                     <li><a class="dropdown-item" href="{{ url_for('admin_bp.aula') }}"><i class="fa-solid fa-users-rectangle"><p>Aulas</p></i></a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('admin_bp.notas') }}"><i class="fa-solid fa-ranking-star"><p>Notas</p></i></a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('admin_bp.planillas') }}"><i class="fa-solid fa-folder-open"><p>Planillas</p></i></a></li>
                     <li><a class="dropdown-item" href="{{ url_for('admin_bp.noticia') }}"><i class="fa-solid fa-radio"><p>Noticias</p></i></a></li>
                     <li><a class="dropdown-item" href="{{ url_for('admin_bp.login') }}"><i class="fa-solid fa-right-to-bracket"><p>Salir</p></i></a></li>
                   </ul>
@@ -72,8 +70,6 @@
                       <a href="{{ url_for('admin_bp.curso') }}"><i class="fa-solid fa-layer-group"><p>Cursos</p></i></a>
                       <a href="{{ url_for('admin_bp.horario') }}"><i class="fa-solid fa-calendar-days"><p>Horarios</p></i></a>
                       <a href="{{ url_for('admin_bp.aula') }}"><i class="fa-solid fa-users-rectangle"><p>Aulas</p></i></a>
-                      <a href="{{ url_for('admin_bp.notas') }}"><i class="fa-solid fa-ranking-star"><p>Notas</p></i></a>
-                      <a href="{{ url_for('admin_bp.planillas') }}"><i class="fa-solid fa-folder-open"><p>Planillas</p></i></a>
                       <a href="{{ url_for('admin_bp.noticia') }}"><i class="fa-solid fa-radio"><p>Noticias</p></i></a>
                       <a href="{{ url_for('admin_bp.login') }}"><i class="fa-solid fa-right-to-bracket"><p>Salir</p></i></a> 
                     </div>
@@ -126,11 +122,7 @@
                                             </form>
                                         </td>
                                     </tr>
-                                {% endfor %}
-                            {% else %}
-                                <tr>
-                                    <td colspan="6">No hay usuarios registrados en este curso.</td>
-                                </tr>
+                              {% endfor %}
                             {% endif %}
                         </tbody>
                     </table>
